--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "firebase": "^11.6.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
